// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snap - definition | CONFIGURATION: default | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "tests.__fixtures__.definition.object-arg.world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "tests.__fixtures__.definition.object-arg.headerTitle.1203284554"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: default | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.default.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: default | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`snap - definition | CONFIGURATION: default | import as 1`] = `
"import { defineMessages as testDefineMessages } from 'react-intl';
testDefineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.import-as.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: default | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "tests.__fixtures__.definition.leading-comment.hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: default | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "tests.__fixtures__.definition.leading-comment-with-description.world.612730937"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: default | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: default | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: default | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`snap - definition | CONFIGURATION: default | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: default | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`snap - definition | CONFIGURATION: default | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`snap - definition | CONFIGURATION: default | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`snap - definition | CONFIGURATION: default | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.string-literal.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: default | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.use-variable.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: default | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`snap - definition | CONFIGURATION: default | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-func.hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`snap - definition | CONFIGURATION: default | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-specifier.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "base64" | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ub2JqZWN0LWFyZy53b3JsZA=="
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ub2JqZWN0LWFyZy5oZWFkZXJUaXRsZS4xMjAzMjg0NTU0"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "base64" | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24uZGVmYXVsdC5oZWxsbw==",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "base64" | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "base64" | import as 1`] = `
"import { defineMessages as testDefineMessages } from 'react-intl';
testDefineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24uaW1wb3J0LWFzLmhlbGxv",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "base64" | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ubGVhZGluZy1jb21tZW50LmhlbGxv",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "base64" | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ubGVhZGluZy1jb21tZW50LXdpdGgtZGVzY3JpcHRpb24ud29ybGQuNjEyNzMwOTM3"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "base64" | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "base64" | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ubXVsdGktZXhwb3J0LmhlbGxv",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ubXVsdGktZXhwb3J0LmhlbGxv",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "base64" | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "base64" | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "base64" | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "base64" | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "base64" | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "base64" | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24uc3RyaW5nLWxpdGVyYWwuaGVsbG8=",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "base64" | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24udXNlLXZhcmlhYmxlLmhlbGxv",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "base64" | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "base64" | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ud2l0aC1vdGhlci1mdW5jLmhlbGxv",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "base64" | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "dGVzdHMuX19maXh0dXJlc19fLmRlZmluaXRpb24ud2l0aC1vdGhlci1zcGVjaWZpZXIuaGVsbG8=",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "murmur3" | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "1926670492"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "1820611081"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "murmur3" | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "1071257088",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "murmur3" | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "murmur3" | import as 1`] = `
"import { defineMessages as testDefineMessages } from 'react-intl';
testDefineMessages({
    hello: {
        "id": "3704159885",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "murmur3" | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "3061481045",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "murmur3" | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "4160490044"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "murmur3" | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "murmur3" | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "386652714",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "386652714",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "murmur3" | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "murmur3" | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "murmur3" | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "murmur3" | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "murmur3" | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "murmur3" | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "322375284",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "murmur3" | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "3342025680",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "murmur3" | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "murmur3" | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "193611303",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "murmur3" | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "776008494",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "unknown" | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "1926670492"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "1820611081"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "unknown" | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "1071257088",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "unknown" | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "unknown" | import as 1`] = `
"import { defineMessages as testDefineMessages } from 'react-intl';
testDefineMessages({
    hello: {
        "id": "3704159885",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "unknown" | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "3061481045",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "unknown" | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "4160490044"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "unknown" | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "unknown" | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "386652714",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "386652714",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "unknown" | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "unknown" | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "unknown" | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "unknown" | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "unknown" | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "unknown" | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "322375284",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "unknown" | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "3342025680",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "unknown" | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "unknown" | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "193611303",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`snap - definition | CONFIGURATION: hashAlgorithm = "unknown" | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "776008494",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world'
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.'
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`snap - definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | import as 1`] = `
"import { defineMessages as testDefineMessages } from 'react-intl';
testDefineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: 'hello',
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world'
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.module-source-name.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: 'hello world extra'
});
export default defineMessages({
    hello: 'hello world'
});
"
`;

exports[`snap - definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`snap - definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`snap - definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`snap - definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`snap - definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: 'hello world'
});
"
`;

exports[`snap - definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages(messages);
"
`;

exports[`snap - definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`snap - definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: 'hello'
});
hello({
    id: 'hoge'
});
"
`;

exports[`snap - definition | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello world'
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "" | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "tests.__fixtures__.definition.object-arg.world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "tests.__fixtures__.definition.object-arg.headerTitle.1203284554"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "" | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.default.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "" | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "" | import as 1`] = `
"import { defineMessages as testDefineMessages } from 'react-intl';
testDefineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.import-as.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "" | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "tests.__fixtures__.definition.leading-comment.hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "" | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "tests.__fixtures__.definition.leading-comment-with-description.world.612730937"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "" | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "" | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "" | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "" | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "" | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "" | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "" | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "" | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.string-literal.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "" | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.use-variable.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "" | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "" | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-func.hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "" | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-specifier.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "../" | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "tests.__fixtures__.definition.object-arg.world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "tests.__fixtures__.definition.object-arg.headerTitle.1203284554"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "../" | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.default.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "../" | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "../" | import as 1`] = `
"import { defineMessages as testDefineMessages } from 'react-intl';
testDefineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.import-as.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "../" | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "tests.__fixtures__.definition.leading-comment.hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "../" | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "tests.__fixtures__.definition.leading-comment-with-description.world.612730937"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "../" | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "../" | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "../" | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "../" | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "../" | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "../" | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "../" | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "../" | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.string-literal.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "../" | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.use-variable.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "../" | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "../" | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-func.hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`snap - definition | CONFIGURATION: relativeTo = "../" | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-specifier.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests" | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "__fixtures__.definition.object-arg.world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "__fixtures__.definition.object-arg.headerTitle.1203284554"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests" | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "__fixtures__.definition.default.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests" | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests" | import as 1`] = `
"import { defineMessages as testDefineMessages } from 'react-intl';
testDefineMessages({
    hello: {
        "id": "__fixtures__.definition.import-as.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests" | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "__fixtures__.definition.leading-comment.hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests" | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "__fixtures__.definition.leading-comment-with-description.world.612730937"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests" | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests" | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests" | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests" | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests" | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests" | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests" | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests" | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "__fixtures__.definition.string-literal.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests" | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "__fixtures__.definition.use-variable.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests" | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests" | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "__fixtures__.definition.with-other-func.hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests" | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "__fixtures__.definition.with-other-specifier.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests.__fixtures__" | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "definition.object-arg.world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "definition.object-arg.headerTitle.1203284554"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests.__fixtures__" | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "definition.default.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests.__fixtures__" | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests.__fixtures__" | import as 1`] = `
"import { defineMessages as testDefineMessages } from 'react-intl';
testDefineMessages({
    hello: {
        "id": "definition.import-as.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests.__fixtures__" | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "definition.leading-comment.hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests.__fixtures__" | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "definition.leading-comment-with-description.world.612730937"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests.__fixtures__" | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests.__fixtures__" | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "definition.multi-export.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "definition.multi-export.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests.__fixtures__" | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests.__fixtures__" | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests.__fixtures__" | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests.__fixtures__" | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests.__fixtures__" | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests.__fixtures__" | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "definition.string-literal.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests.__fixtures__" | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "definition.use-variable.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests.__fixtures__" | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests.__fixtures__" | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "definition.with-other-func.hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests.__fixtures__" | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "definition.with-other-specifier.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests/" | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "__fixtures__.definition.object-arg.world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "__fixtures__.definition.object-arg.headerTitle.1203284554"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests/" | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "__fixtures__.definition.default.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests/" | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests/" | import as 1`] = `
"import { defineMessages as testDefineMessages } from 'react-intl';
testDefineMessages({
    hello: {
        "id": "__fixtures__.definition.import-as.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests/" | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "__fixtures__.definition.leading-comment.hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests/" | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "__fixtures__.definition.leading-comment-with-description.world.612730937"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests/" | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests/" | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests/" | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests/" | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests/" | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests/" | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests/" | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests/" | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "__fixtures__.definition.string-literal.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests/" | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "__fixtures__.definition.use-variable.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests/" | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests/" | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "__fixtures__.definition.with-other-func.hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = "tests/" | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "__fixtures__.definition.with-other-specifier.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = /__fixtures__/ | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "tests.__fixtures__.definition.object-arg.world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "tests.__fixtures__.definition.object-arg.headerTitle.1203284554"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = /__fixtures__/ | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.default.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = /__fixtures__/ | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = /__fixtures__/ | import as 1`] = `
"import { defineMessages as testDefineMessages } from 'react-intl';
testDefineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.import-as.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = /__fixtures__/ | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "tests.__fixtures__.definition.leading-comment.hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = /__fixtures__/ | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "tests.__fixtures__.definition.leading-comment-with-description.world.612730937"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = /__fixtures__/ | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = /__fixtures__/ | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.multi-export.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = /__fixtures__/ | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = /__fixtures__/ | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = /__fixtures__/ | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = /__fixtures__/ | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = /__fixtures__/ | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = /__fixtures__/ | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.string-literal.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = /__fixtures__/ | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.use-variable.hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = /__fixtures__/ | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = /__fixtures__/ | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-func.hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = /__fixtures__/ | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests.__fixtures__.definition.with-other-specifier.hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = true | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "headerTitle.1203284554"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = true | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = true | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = true | import as 1`] = `
"import { defineMessages as testDefineMessages } from 'react-intl';
testDefineMessages({
    hello: {
        "id": "hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = true | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = true | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "world.612730937"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = true | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = true | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = true | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = true | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = true | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = true | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = true | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = true | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = true | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = true | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = true | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`snap - definition | CONFIGURATION: removePrefix = true | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: separator = "_" | Object 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    new: {
        id: 'this is id',
        defaultMessage: 'id'
    },
    world: {
        defaultMessage: 'world',
        "id": "tests___fixtures___definition_object-arg_world"
    },
    headerTitle: {
        defaultMessage: 'Welcome to dashboard {name}!',
        description: 'Message to greet the user.',
        "id": "tests___fixtures___definition_object-arg_headerTitle_1203284554"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: separator = "_" | default 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests___fixtures___definition_default_hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: separator = "_" | eval string 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: 'hello' + 'world'
});
"
`;

exports[`snap - definition | CONFIGURATION: separator = "_" | import as 1`] = `
"import { defineMessages as testDefineMessages } from 'react-intl';
testDefineMessages({
    hello: {
        "id": "tests___fixtures___definition_import-as_hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: separator = "_" | leading comment 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // The main Hello of our app.
    hello: {
        "id": "tests___fixtures___definition_leading-comment_hello",
        "defaultMessage": "hello"
    },
    // Another Hello,
    // multiline this time
    world: {
        id: 'hello.world',
        defaultMessage: 'hello world'
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: separator = "_" | leading comment with description 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    // This comment should not be used
    world: {
        defaultMessage: 'hello world',
        description: 'The hello world',
        "id": "tests___fixtures___definition_leading-comment-with-description_world_612730937"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: separator = "_" | moduleSourceName 1`] = `
"import { defineMessages } from 'gatsby-plugin-intl';
export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: separator = "_" | multi export 1`] = `
"import { defineMessages } from 'react-intl';
export var extra = defineMessages({
    hello: {
        "id": "tests___fixtures___definition_multi-export_hello",
        "defaultMessage": "hello world extra"
    }
});
export default defineMessages({
    hello: {
        "id": "tests___fixtures___definition_multi-export_hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: separator = "_" | not transform if callee is not identifier 1`] = `
"import { defineMessages } from 'react-intl';
var m = [
    defineMessages
];
export default m[0]({
    hello: 'hello world'
});
"
`;

exports[`snap - definition | CONFIGURATION: separator = "_" | not transform if defineMessages is not imported 1`] = `
"export default defineMessages({
    hello: 'hello'
});
"
`;

exports[`snap - definition | CONFIGURATION: separator = "_" | not transform when defineMessages argumens is empty 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages();
"
`;

exports[`snap - definition | CONFIGURATION: separator = "_" | not transform when defineMessages argumens is not object 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(1);
"
`;

exports[`snap - definition | CONFIGURATION: separator = "_" | not transfrom when the variable can not be found 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages(messages);
"
`;

exports[`snap - definition | CONFIGURATION: separator = "_" | string literal 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests___fixtures___definition_string-literal_hello",
        "defaultMessage": "hello world"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: separator = "_" | when using the variable 1`] = `
"import { defineMessages } from 'react-intl';
var messages = {
    hello: 'hello'
};
export default defineMessages({
    hello: {
        "id": "tests___fixtures___definition_use-variable_hello",
        "defaultMessage": "hello"
    }
});
"
`;

exports[`snap - definition | CONFIGURATION: separator = "_" | with include value 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: "hello world ".concat(1)
});
"
`;

exports[`snap - definition | CONFIGURATION: separator = "_" | with other func 1`] = `
"import { defineMessages } from 'react-intl';
defineMessages({
    hello: {
        "id": "tests___fixtures___definition_with-other-func_hello",
        "defaultMessage": "hello"
    }
});
hello({
    id: 'hoge'
});
"
`;

exports[`snap - definition | CONFIGURATION: separator = "_" | with other specifier 1`] = `
"import { defineMessages } from 'react-intl';
export default defineMessages({
    hello: {
        "id": "tests___fixtures___definition_with-other-specifier_hello",
        "defaultMessage": "hello world"
    }
});
"
`;
